--- a/css/style.css
+++ b/css/style.css
@@ -1,116 +1,116 @@
 /*Fonts*/
 @font-face {
   font-family: 'Roboto';
-	font-style: normal;
-	font-weight: bold;
+  font-style: normal;
+  font-weight: bold;
   src: local('Roboto'),
-	url('../fonts/robotobold.woff2') format(woff2),
-	url('../fonts/robotobold.woff') format(woff);
+  url('../fonts/robotobold.woff2') format(woff2),
+  url('../fonts/robotobold.woff') format(woff);
 }
 
 @font-face {
-	font-family: 'Roboto';
-	font-style: normal;
-	font-weight: 500;
-	src: local('Roboto');
-	url('../fonts/robotomedium.woff2') format(woff2);
-	url('../fonts/robotomedium.woff') format(woff);
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Roboto');
+  url('../fonts/robotomedium.woff2') format(woff2);
+  url('../fonts/robotomedium.woff') format(woff);
 }
 
 /*Variables*/
 
 :root {
-	--body-background-color1: #849D8F;
-	--body-background-color2: #8996A6;
-	--body-background-color3: #9D8B84;
-	--basic-font-color: #FFFFFF;
-	--black-color: #323232;
-	--hover-pink-color: #FBDED7;
-	--active-pink-color: #F6B5A5;
-	--button-gradient-usual: linear-gradient(180deg, #F26843 0%, #E74A35 100%);
-	--raspberry-free: #A1092F;
-	--chocolate-free: #57331C;
-	--features-color: #E8D8B6;
-	--mailing-background: #F8F7F4;
-	--mailing-text-color: #5A5A5A;
-	--contacts-background-color: #FEFEFE;
+  --body-background-color1: #849D8F;
+  --body-background-color2: #8996A6;
+  --body-background-color3: #9D8B84;
+  --basic-font-color: #FFFFFF;
+  --black-color: #323232;
+  --hover-pink-color: #FBDED7;
+  --active-pink-color: #F6B5A5;
+  --button-gradient-usual: -webkit-linear-gradient(#F26843 0%, #E74A35 100%);
+  --button-gradient-usual: -o-linear-gradient(#F26843 0%, #E74A35 100%);
+  --button-gradient-usual: linear-gradient(#F26843 0%, #E74A35 100%);
+  --raspberry-free: #A1092F;
+  --chocolate-free: #57331C;
+  --features-color: #E8D8B6;
+  --mailing-background: #F8F7F4;
+  --mailing-text-color: #5A5A5A;
+  --contacts-background-color: #FEFEFE;
 }
-
 
 /*Global*/
 
 body {
-	min-width: 1200px;
-	margin: 0;
-	padding: 9px 27px;
-	font-family: 'Roboto', Arial, sans-serif;
-	background-color: var(--body-background-color1);
-	font-size: 16px;
-	line-height: 22px;
-	font-weight: 500;
-	color: var(--basic-font-color);
+  min-width: 1200px;
+  margin: 0;
+  padding: 9px 27px;
+  font-family: 'Roboto', Arial, sans-serif;
+  background-color: var(--body-background-color1);
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+  color: var(--basic-font-color);
 }
 
 .page a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 img {
-	max-width: 100%;
-	height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 /*Header*/
 
 .main-navigation {
-	font-size: 16px;
-	line-height: 18px;
-	color: var(--basic-font-color);
-	background-color: transparent;
+  font-size: 16px;
+  line-height: 18px;
+  color: var(--basic-font-color);
+  background-color: transparent;
 }
 
 .main-menu,
 .sub-menu {
-	list-style: none;
+  list-style: none;
 }
 
 .main-menu > li {
-	position: relative;
-	display: inline-block;
+  position: relative;
+  display: inline-block;
 
 }
 .main-menu a {
-	display: block;
-	font-weight: bold;
-	font-size: 16px;
-	line-height: 18px;
-	color: var(--basic-font-color);
-	padding: 9px 13px;
+  display: block;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 18px;
+  color: var(--basic-font-color);
+  padding: 9px 13px;
 }
 
 .main-menu a:hover {
-	color: var(--black-color);
-	background-color: var(--basic-font-color);
-	border-radius: 26px;
+  color: var(--black-color);
+  background-color: var(--basic-font-color);
+  border-radius: 26px;
 }
 
 
 .main-menu .sub-menu {
-	display: none;
-	position: absolute;
-	width: 143px;
-	background-color: var(--basic-font-color);
-	border-radius: 4px;
-	font-weight: normal;
-	padding-inline-start: 0px;
+  display: none;
+  position: absolute;
+  width: 143px;
+  background-color: var(--basic-font-color);
+  border-radius: 4px;
+  font-weight: normal;
+  padding-inline-start: 0px;
 }
 
-
 .sub-menu a {
-	color: var(--black-color);
-	font-weight: normal;
-	font-size: 14px;
-	line-height: 18px;
+  color: var(--black-color);
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
 }
 
 .main-menu > li:hover .sub-menu {
@@ -118,282 +118,281 @@ img {
 }
 
 .sub-menu a:hover {
-	background-color: var(--hover-pink-color);
-	border-radius: 0px;
+  background-color: var(--hover-pink-color);
+  border-radius: 0px;
 }
 
 .sub-menu a:active {
-	background-color: var(--active-pink-color);
+  background-color: var(--active-pink-color);
 }
 
 .main-header-buttons a {
-	color: var(--basic-font-color);
-	font-size: 14px;
-	font-height: 16px;
+  color: var(--basic-font-color);
+  font-size: 14px;
+  font-height: 16px;
 }
 
 .main-header-buttons a:hover {
-	color: var(--black-color);
-	background-color: var(--basic-font-color);
+  color: var(--black-color);
+  background-color: var(--basic-font-color);
 }
 
 .header-item {
-	color: var(--basic-font-color);
-	font-weight: bold;
-	font-size: 14px;
-	font-weight: 16px;
+  color: var(--basic-font-color);
+  font-weight: bold;
+  font-size: 14px;
+  font-weight: 16px;
 }
 
 .header-phone {
-	color: var(--basic-font-color);
-	font-weight: bold;
-	font-size: 22px;
-	line-height: 24px;
+  color: var(--basic-font-color);
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 24px;
 }
-
 
 /*Main*/
 
 .best-offer h2 {
-	color: var(--basic-font-color);
-	font-weight: bold;
-	font-size: 60px;
-	line-height: 60px;
+  color: var(--basic-font-color);
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 60px;
 }
 
 .best-offer-button {
-	display: inline-block;
-	text-align: center;
-	font-size: 32px;
-	text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
-	vertical-align: middle;
-	color: var(--basic-font-color);
-	font-weight: bold;
-	background: var(--button-gradient-usual);
-	box-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
-	width: 279px;
-	height: 63px;
-	border-radius: 50px;
+  display: inline-block;
+  text-align: center;
+  font-size: 32px;
+  text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
+  vertical-align: middle;
+  color: var(--basic-font-color);
+  font-weight: bold;
+  background: var(--button-gradient-usual);
+  box-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
+  width: 279px;
+  height: 63px;
+  border-radius: 50px;
 }
 
 .best-offer-button:hover {
-	background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), linear-gradient(180deg, #F26843 0%, #E74A35 100%);
-	box-shadow: 0px 2px 2px #AC1000;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), linear-gradient(180deg, #F26843 0%, #E74A35 100%);
+  box-shadow: 0px 2px 2px #AC1000;
 }
 
 .best-offer-button:active {
-	background: linear-gradient(0deg, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)), linear-gradient(180deg, #F26843 0%, #E74A35 100%);
-	box-shadow: inset 0px 2px 2px #942718;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)), linear-gradient(180deg, #F26843 0%, #E74A35 100%);
+  box-shadow: inset 0px 2px 2px #942718;
 }
 
 .ice-cream1 {
-	width: 683px;
-	height: 584px;
-	background-image: url("../img/ice-cream.png"), url("../img/ice-cream2.png");
-	background-position: left, right;
-	background-repeat: no-repeat;
+  width: 683px;
+  height: 584px;
+  background-image: url("../img/ice-cream.png"), url("../img/ice-cream2.png");
+  background-position: left, right;
+  background-repeat: no-repeat;
 }
 
 .ice-cream2 {
-	width: 683px;
-	height: 584px;
-	background-image: url("../img/choco-ice-cream.png"), url("../img/lime-ice-cream.png");
-	background-position: left, right;
-	background-repeat: no-repeat;
+  width: 683px;
+  height: 584px;
+  background-image: url("../img/choco-ice-cream.png"), url("../img/lime-ice-cream.png");
+  background-position: left, right;
+  background-repeat: no-repeat;
 }
 
 .ice-cream3 {
-	width: 683px;
-	height: 584px;
-	background-image: url("../img/ice-cream3.png"), url("../img/ice-cream4.png");
-	background-position: left, right;
-	background-repeat: no-repeat;
+  width: 683px;
+  height: 584px;
+  background-image: url("../img/ice-cream3.png"), url("../img/ice-cream4.png");
+  background-position: left, right;
+  background-repeat: no-repeat;
 }
 
 .raspberry-free {
-	width: 560px;
-	height: 229px;
-	background-image: url("../img/raspberry.jpg");
-	background-color: var(--raspberry-free);
-	border-radius: 16px;
+  width: 560px;
+  height: 229px;
+  background-image: url("../img/raspberry.jpg");
+  background-color: var(--raspberry-free);
+  border-radius: 16px;
 }
 
 .raspberry-free h3 {
-	font-size: 35px;
-	font-weight: bold;
-	line-height: 41px;
+  font-size: 35px;
+  font-weight: bold;
+  line-height: 41px;
 }
 
 .raspberry-free p {
-	font-size: 18px;
-	font-weight: bold;
-	line-height: 22px;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 22px;
 }
 
 .button {
-	display: inline-block;
-	color: var(--basic-font-color);
-	font-weight: bold;
-	font-size: 18px;
-	line-height: 24px;
-	width: 164px;
-	height: 48px;
-	background: linear-gradient(180deg, #F26843 0%, #E74A35 100%);
-	border-radius: 70px;
+  display: inline-block;
+  color: var(--basic-font-color);
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 24px;
+  width: 164px;
+  height: 48px;
+  background: linear-gradient(180deg, #F26843 0%, #E74A35 100%);
+  border-radius: 70px;
 }
 
 .button:hover {
-	background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), linear-gradient(180deg, #F26843 0%, #E74A35 100%);
-	box-shadow: 0px 2px 2px #AC1000;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), linear-gradient(180deg, #F26843 0%, #E74A35 100%);
+  box-shadow: 0px 2px 2px #AC1000;
 }
 
 .button:active{
-	background: linear-gradient(0deg, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)), linear-gradient(180deg, #F26843 0%, #E74A35 100%);
-	box-shadow: inset 0px 2px 2px #942718;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)), linear-gradient(180deg, #F26843 0%, #E74A35 100%);
+  box-shadow: inset 0px 2px 2px #942718;
 }
 
 .chocolate-free {
-	width: 560px;
-	height: 229px;
-	background-image: url(../img/choco.jpg);
-	background-color: var(--chocolate-free);
-	border-radius: 16px;
+  width: 560px;
+  height: 229px;
+  background-image: url(../img/choco.jpg);
+  background-color: var(--chocolate-free);
+  border-radius: 16px;
 }
 
 .chocolate-free h3 {
-	font-size: 35px;
-	font-weight: bold;
-	line-height: 41px;
+  font-size: 35px;
+  font-weight: bold;
+  line-height: 41px;
 }
 
 .chocolate-free p {
-	font-size: 18px;
-	font-weight: bold;
-	line-height: 22px;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 22px;
 }
 
 .goods-item-price {
-	font-size: 45px;
-	font-weight: bold;
-	line-height: 45px;
+  font-size: 45px;
+  font-weight: bold;
+  line-height: 45px;
 }
 
 .features {
-	background-color: var(--features-color);
-	border-radius: 16px;
+  background-color: var(--features-color);
+  border-radius: 16px;
 }
 
 .features h2 {
-	color: var(--black-color);
-	font-size: 24px;
-	line-height: 30px;
-	font-weight: normal;
+  color: var(--black-color);
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: normal;
 }
 
 .features li {
-	color: var(--black-color);
-	font-size: 16px;
-	line-height: 22px;
-	font-weight: normal;
+  color: var(--black-color);
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: normal;
 }
 
 .news {
-	background-color: var(--basic-font-color);
-	border-radius: 16px;
+  background-color: var(--basic-font-color);
+  border-radius: 16px;
 }
 
 .news a {
-	color: var(--black-color);
-	font-size: 24px;
-	font-weight: bold;
-	line-height: 30px;
+  color: var(--black-color);
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 30px;
 }
 
 .news p {
-	color: var(--black-color);
-	font-size: 16px;
-	font-weight: bold;
-	line-height: 22px;
+  color: var(--black-color);
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 22px;
 }
 
 .mailing {
-	background-color: var(--mailing-background);
-	color: var(--mailing-text-color);
-	font-size: 16px;
-	line-height: 22px;
-	font-weight: normal;
-	border-radius: 16px;
+  background-color: var(--mailing-background);
+  color: var(--mailing-text-color);
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: normal;
+  border-radius: 16px;
 }
 
 .contacts {
-	color: var(--black-color);
-	background-color: var(--contacts-background-color);
-	border-radius: 16px;
+  color: var(--black-color);
+  background-color: var(--contacts-background-color);
+  border-radius: 16px;
 }
 
 .address-name {
-	font-size: 16px;
-	line-height: 20px;
-	font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: normal;
 }
 
 .address {
-	font-size: 18px;
-	line-height: 24px;
-	font-weight: bold;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: bold;
 }
 
 .tel-name {
-	font-size: 14px;
-	line-height: 20px;
-	font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: normal;
 }
 
 .contacts-phone {
-	color: var(--black-color);
-	font-size: 18px;
-	line-height: 24px;
-	font-weight: bold;
+  color: var(--black-color);
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: bold;
 }
 
 .opening-hours {
-	font-size: 14px;
-	line-height: 20px;
-	font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: normal;
 }
 
 /*Main-Footer*/
 
 .footer-social a {
-	background: rgba(255, 255, 255, 0.8);
-	color: #849D8F;
+  background: rgba(255, 255, 255, 0.8);
+  color: #849D8F;
 }
 
 .footer-social a:hover {
-	background-color: var(--basic-font-color);
+  background-color: var(--basic-font-color);
 }
 
 .footer-social a:active {
-	background-color: var(--basic-font-color);
+  background-color: var(--basic-font-color);
 }
 
 .footer-info a{
-	color: var(--basic-font-color);
-	font-size: 13px;
-	line-height: 18px;
-	font-weight: normal;
+  color: var(--basic-font-color);
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: normal;
 }
 
 .footer-copyright p {
-	color: var(--basic-font-color);
-	font-size: 12px;
-	line-height: 18px;
-	font-weight: normal;
+  color: var(--basic-font-color);
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: normal;
 }
 
 .htmlacademy-link {
-	color: var(--basic-font-color);
-	font-size: 12px;
-	line-height: 18px;
-	font-weight: normal;
+  color: var(--basic-font-color);
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: normal;
 }
