Стилизация каталога с учетом замечаний

--- a/css/style.css
+++ b/css/style.css
@@ -371,7 +371,7 @@ img {
   color: var(--basic-font-color);
 }
 
-.creamy-ice-cream {
+.main-headline {
   font-size: 35px;
   line-height: 41px;
   font-weight: bold;
