Стилизация внутренней страницы с учетом правок

--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ img {
   line-height: 45px;
 }
 
-.goods-item-description > a {
+.goods-item-name > a {
   color: var(--basic-font-color);
   font-size: 16px;
   font-weight: 500;
